added presentation files

--- a/beamer/tex/tdd.tex
+++ b/beamer/tex/tdd.tex
@@ -10,10 +10,9 @@
   \frametitle{Konzept}
 
   \begin{figure}
-    \includegraphics[width=\linewidth]{img/tdd}
+    \includegraphics[width=0.76\linewidth]{img/tdd}\label{img:tdd_concept}
     \centering
-    \caption{Konzept der testgetriebenen Entwicklung}
-    \label{img:tdd_concept}
+    %\caption{Konzept der testgetriebenen Entwicklung}
   \end{figure}
 
 \end{frame}
